[FIX] view bug for long file names on small screens

--- a/app/css/ama.css
+++ b/app/css/ama.css
@@ -12487,6 +12487,10 @@ strong.total {
       vertical-align: middle; }
   .filebox .filedetails {
     margin-top: 70px; }
+    .filebox .filedetails h2 {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap; }
 
 span.wider {
   letter-spacing: 0.5px; }
